fix:If文のelseを使わない書き方に変更 他以下に対応 引数をキャメルケースに、ルーティングの名前をわかりやすくlike_remove
