# routes/api.php
@@ -28,4 +28,4 @@ Route::group(['middleware' => ['auth:sanctum']], function () {
 
 });
 Route::post('/like', [LikeController::class, 'like'])->name('like');
-Route::post('/remove', [LikeController::class, 'remove'])->name('remove');
+Route::post('/like_remove', [LikeController::class, 'remove'])->name('remove');
